--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,26 +1,42 @@
-group 'com.befovy.fijkplayer'
-version '0.11.0'
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath("com.android.tools.build:gradle:8.1.0")
+    }
+}
+
+rootProject.allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
+    namespace 'com.befovy.fijkplayer'
+    compileSdk 35
 
     defaultConfig {
-        minSdkVersion 16
+        minSdk 21
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
         disable 'InvalidPackage'
     }
+
+    dependencies {
+        // implementation(name: 'fijkplayer-full-release', ext: 'aar')
+
+        // fijkplayer-full include the java lib and native shared libs for armv5 armv7 arm64 x86 x86_64
+        implementation 'com.befovy.fijkplayer:fijkplayer-full:0.7.16'
+        implementation 'androidx.annotation:annotation:1.2.0'
+    }
+
 }
 
-
-dependencies {
-
-    // implementation(name: 'fijkplayer-full-release', ext: 'aar')
-
-    // fijkplayer-full include the java lib and native shared libs for armv5 armv7 arm64 x86 x86_64
-    implementation 'com.befovy.fijkplayer:fijkplayer-full:0.7.16'
-    implementation 'androidx.annotation:annotation:1.2.0'
-}
