--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,29 +1,16 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
-    }
-}
-
 allprojects {
     repositories {
-        mavenCentral()
         google()
-        flatDir {
-            dirs "$rootProject.projectDir/aars"
-        }
+        mavenCentral()
     }
 }
 
-rootProject.buildDir = '../build'
-
+rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-    project.evaluationDependsOn(':app')
+}
+subprojects {
+    project.evaluationDependsOn(":app")
 }
 
 tasks.register("clean", Delete) {
