--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ repository: https://github.com/befovy/fijkplayer
 issue_tracker: https://github.com/befovy/fijkplayer/issues
 
 environment:
-  sdk: ">=2.14.0 <4.0.0"
-  flutter: ">=1.12.0"
+  sdk: ^3.6.2
+  flutter: '>=3.3.0'
 
 dependencies:
   flutter:
